# wtfisjet

./: Cargo.toml  README.md  build.sh
examples/: bspline_examples.rs  curve_fitting.rs  readme.rs
src/: asserts.rs  bspline.rs  dice.rs  dim.rs  infinitesimal.rs  jet.rs  lib.rs  newton.rs  number.rs  test_util.rs
src/infinitesimal/: const_infinitesimal.rs  dense_infinitesimal.rs  no_infinitesimal.rs  sparse_infinitesimal.rs
