[package]
name = "wtfisjet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
num-rational = { version = "0.4.0", optional = true }

[dev-dependencies]
num-rational = "0.4.0"

[features]
default = []
big-rational-number = ["num-rational"]
