[package]
name = "wtfisjet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
num-rational = { version = "0.4.0", optional = true }
intmap = { version = "0.7.1", optional = true }
array-init = { version = "2.0.0", optional = true }
dicetest = { version = "0.3.1", optional = true }
diceprop = { version = "0.2.0", optional = true }

[dev-dependencies]
num-rational = "0.4.0"
intmap = "0.7.1"
array-init = "2.0.0"
dicetest = "0.3.1"
diceprop = "0.2.0"
float_eq = "0.7.0"
poloto = "11.0.2"

[features]
default = ["big-rational-number", "sparse-infinitesimal", "const-infinitesimal", "b-spline"]
big-rational-number = ["num-rational"]
sparse-infinitesimal = ["intmap"]
const-infinitesimal = ["array-init"]
b-spline = []
dice = ["dicetest"]
asserts = ["dicetest", "diceprop"]
